Label Bold Font Solution
Found a solution to excluding the header and last two labels from being selected as bold

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -45,11 +45,8 @@ form {
 
 /* ---- Selectors ---- */
 
-input + label:not(label[for="phone"]),
-input + label:not(label[for="email"]),
-input + label:not(label[for="address"]) 
-{
-    font-weight: bold;
+main label:not(.feedback>label) {
+  font-weight: bold;
 }
 
 
